2007-08-15  David Lawrence Ramsey  <pooka109@gmail.com>

	* Makefile.am: Remove erroneous backslash after
	ChangeLog.pre-2.1 in EXTRA_DIST, so that "make dist" works
	again.
	* files.c (do_insertfile): Make sure the mark is always properly
	positioned after inserting a file with the mark on.
	* nano.c (copy_from_file): Make sure the mark is always properly
	positioned after uncutting multiple lines with the mark on.

2007-08-11  David Lawrence Ramsey  <pooka109@gmail.com>

	* COPYING: Add a copy of the GNU GPL version 3.
	* configure.ac, *.c, *.h: Relicense to the GNU GPL version 3 or
	later.

2007-08-10  David Lawrence Ramsey  <pooka109@gmail.com>

	* files.c (username_tab_completion, cwd_tab_completion,
	input_tab): Update copyright notice to account for
	modifications.
	* utils.c (ngetdelim): Simplify.
	* utils.c (ngetline, ngetdelim): Update copyright notice to
	account for modifications.

2007-08-07  David Lawrence Ramsey  <pooka109@gmail.com>

	* nano.c (copy_from_file): Fix potential segfault, found by Paul
	Goins, after uncutting one line of text with the mark on by
	properly preserving the beginning of the mark.
	* nano.c (copy_from_file): Make sure the mark is always properly
	positioned after uncutting one line of text with the mark on.

2007-08-01  David Lawrence Ramsey  <pooka109@gmail.com>

	* nano.c (version): Display copyright notices.

2007-07-31  David Lawrence Ramsey  <pooka109@gmail.com>

	* configure.ac: Update copyright notice to account for
	modifications.

2007-07-29  David Lawrence Ramsey  <pooka109@gmail.com>

	* doc/faq.html: Update RPM links for nano 2.0.x.

2007-07-11  David Lawrence Ramsey  <pooka109@gmail.com>

	* files.c (copy_file): Assert that inn and out don't both point
	to the same file.

2007-07-10  David Lawrence Ramsey  <pooka109@gmail.com>

	* chars.c (nstrcasestr, mbstrcasestr, revstrstr, revstrcasestr,
	mbrevstrcasestr): Simplify and rewrite to use the strncasecmp()
	equivalents.
